--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "compression": "^1.7.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.8.0"
+    "graphql": "^15.8.0",
+    "mongodb": "^4.13.0"
   },
   "name": "microservicio-gql",
   "description": "api graphql and api rest",
@@ -15,7 +17,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/interface/api/server/index.js"
+    "start": "node ./database/seed.js"
   },
   "repository": {
     "type": "git",
